--- a/vis_line.html
+++ b/vis_line.html
@@ -4,7 +4,7 @@
 <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="static/css/responsive.css">
     <link href="https://getbootstrap.com/examples/justified-nav/justified-nav.css" rel="stylesheet">
-    <link rel="stylesheet" href="static/stylegraph.css">
+    <link rel="stylesheet" href="static/css/stylegraph.css">
 <style>
 
 svg {
