--- a/upload.html
+++ b/upload.html
@@ -205,7 +205,7 @@ if(form.room.value == '')
   
   
 
-    <script  src="js/index.js"></script>
+    <script  src="static/js/index.js"></script>
 
 
 
