Fix responsive and css

--- a/upload.html
+++ b/upload.html
@@ -188,22 +188,22 @@ path.area {
 <table>
 <tr>
 <td><label>Date:</label></td> 
-<td><input type="text" size="12" required pattern="\d{1,2}/\d{1,2}/\d{4}" placeholder="dd/mm/yyyy" name="startdate"></td>
+<td><input type="text" size="12" required pattern="\d{1,2}/\d{1,2}/\d{4}" placeholder="dd/mm/yyyy" name="date"></td>
 </tr>
 <br><br>
 <tr>
 <td><label>Start Time: </label></td>
-<td><input type="text" size="12" required pattern="\d{1,2}:\d{2}([ap]m)?" name="starttime"></td>
+<td><input type="text" size="12" required pattern="\d{1,2}:\d{2}([ap]m)?" name="start_time"></td>
 </tr>
 <br><br>
 <tr>
 <td><label>End Time: </label></td>
-<td><input type="text" size="12" required pattern="\d{1,2}:\d{2}([ap]m)?" name="endtime"></td>
+<td><input type="text" size="12" required pattern="\d{1,2}:\d{2}([ap]m)?" name="end_time"></td>
 </tr>
 <br><br>
 <tr>
 <td><label>Room Name: </label></td>
-<td><input type="text" size="12" name="room"></td>
+<td><input type="text" size="12" name="room_name"></td>
 </tr>
 </table>
 <br>
