--- a/vis_line.html
+++ b/vis_line.html
@@ -211,6 +211,7 @@ svg.append("clipPath")
 
 #video{
   margin-left: 40px
+  left: 50%;
 }
 
 </style>
@@ -219,7 +220,7 @@ svg.append("clipPath")
   <span></span>
 </div>
 
-<video id="video" width="400" controls autoplay>
+<video  width="400" controls muted>
     <source src = {{ file_path }} type="video/mp4">
 </video>
 
