--- a/vis_line.html
+++ b/vis_line.html
@@ -209,10 +209,6 @@ svg.append("clipPath")
   width: 0px;
 }
 
-#video{
-  margin-left: 40px
-  left: 50%;
-}
 
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
@@ -220,7 +216,7 @@ svg.append("clipPath")
   <span></span>
 </div>
 
-<video  width="400" controls muted>
+<video id= width="400" controls muted>
     <source src = {{ file_path }} type="video/mp4">
 </video>
 
