--- a/upload.html
+++ b/upload.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="css/responsive.css">
+<link rel="stylesheet" href="static/css/responsive.css">
     
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:100,300'>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
 <style>
 
 svg {
@@ -192,29 +192,29 @@ form{
   <div class="body" id="drop">
    <i class="fa fa-file-text-o pointer-none" aria-hidden="true"></i>
    <p class="pointer-none"><b>Drag and drop</b> files here <br /> or <a href="" id="triggerFile">browse</a> to begin the upload</p>
-      <input type="file" multiple="multiple" />
+      <input type="file" multiple="multiple" name="file"/>
       </div>
       <center>
 
 <table>
 <tr>
 <td><label>Date:</label></td> 
-<td><input type="text" size="12" required pattern="\d{1,2}/\d{1,2}/\d{4}" placeholder="dd/mm/yyyy" name="startdate"></td>
+<td><input type="text" size="12" required pattern="\d{1,2}/\d{1,2}/\d{4}" placeholder="dd/mm/yyyy" name="date"></td>
 </tr>
 <br><br>
 <tr>
 <td><label>Start Time: </label></td>
-<td><input type="text" size="12" required pattern="\d{1,2}:\d{2}([ap]m)?" name="starttime"></td>
+<td><input type="text" size="12" required pattern="\d{1,2}:\d{2}([ap]m)?" name="start_time"></td>
 </tr>
 <br><br>
 <tr>
 <td><label>End Time: </label></td>
-<td><input type="text" size="12" required pattern="\d{1,2}:\d{2}([ap]m)?" name="endtime"></td>
+<td><input type="text" size="12" required pattern="\d{1,2}:\d{2}([ap]m)?" name="end_time"></td>
 </tr>
 <br><br>
 <tr>
 <td><label>Room Name: </label></td>
-<td><input type="text" size="12" name="room"></td>
+<td><input type="text" size="12" name="room_name"></td>
 </tr>
 </table>
 <br>
@@ -227,29 +227,29 @@ function checkForm(form)
     // regular expression to match required date format
     re = /^(\d{1,2})\/(\d{1,2})\/(\d{4})$/;
 
-    if(form.startdate.value != '') {
-      if(regs = form.startdate.value.match(re)) {
+    if(form.date.value != '') {
+      if(regs = form.date.value.match(re)) {
         // day value between 1 and 31
         if(regs[1] < 1 || regs[1] > 31) {
           alert("Invalid value for day: " + regs[1]);
-          form.startdate.focus();
+          form.date.focus();
           return false;
         }
         // month value between 1 and 12
         if(regs[2] < 1 || regs[2] > 12) {
           alert("Invalid value for month: " + regs[2]);
-          form.startdate.focus();
+          form.date.focus();
           return false;
         }
         // year value between 1902 and 2018
         if(regs[3] < 1902 || regs[3] > (new Date()).getFullYear()) {
           alert("Invalid value for year: " + regs[3] + " - must be between 1902 and " + (new Date()).getFullYear());
-          form.startdate.focus();
+          form.date.focus();
           return false;
         }
       } else {
-        alert("Invalid date format: " + form.startdate.value);
-        form.startdate.focus();
+        alert("Invalid date format: " + form.date.value);
+        form.date.focus();
         return false;
       }
     }
@@ -257,65 +257,65 @@ function checkForm(form)
     // regular expression to match required time format
     re = /^(\d{1,2}):(\d{2})([ap]m)?$/;
 
-    if(form.starttime.value != '') {
-      if(regs = form.starttime.value.match(re)) {
+    if(form.start_time.value != '') {
+      if(regs = form.start_time.value.match(re)) {
         if(regs[3]) {
           // 12-hour value between 1 and 12
           if(regs[1] < 1 || regs[1] > 12) {
             alert("Invalid value for hours: " + regs[1]);
-            form.starttime.focus();
+            form.start_time.focus();
             return false;
           }
         } else {
           // 24-hour value between 0 and 23
           if(regs[1] > 23) {
             alert("Invalid value for hours: " + regs[1]);
-            form.starttime.focus();
+            form.start_time.focus();
             return false;
           }
         }
         // minute value between 0 and 59
         if(regs[2] > 59) {
           alert("Invalid value for minutes: " + regs[2]);
-          form.starttime.focus();
+          form.start_time.focus();
           return false;
         }
       } else {
-        alert("Invalid time format: " + form.starttime.value);
-        form.starttime.focus();
+        alert("Invalid time format: " + form.start_time.value);
+        form.start_time.focus();
         return false;
       }
     }
-    if(form.endtime.value != '') {
-      if(regs = form.endtime.value.match(re)) {
+    if(form.end_time.value != '') {
+      if(regs = form.end_time.value.match(re)) {
         if(regs[3]) {
           // 12-hour value between 1 and 12
           if(regs[1] < 1 || regs[1] > 12) {
             alert("Invalid value for hours: " + regs[1]);
-            form.endtime.focus();
+            form.end_time.focus();
             return false;
           }
         } else {
           // 24-hour value between 0 and 23
           if(regs[1] > 23) {
             alert("Invalid value for hours: " + regs[1]);
-            form.endtime.focus();
+            form.end_time.focus();
             return false;
           }
         }
         // minute value between 0 and 59
         if(regs[2] > 59) {
           alert("Invalid value for minutes: " + regs[2]);
-          form.endtime.focus();
+          form.end_time.focus();
           return false;
         }
       } else {
         alert("Invalid time format: " + form.endtime.value);
-        form.endtime.focus();
+        form.end_time.focus();
         return false;
       }
     }
-if(form.room.value == '') 
+if(form.room_name.value == '') 
 {
     alert("Enter the name of the room");
     return false;
@@ -345,7 +345,7 @@ if(form.room.value == '')
  </div> 
   </div>
 
-    <script  src="js/index.js"></script>
+    <script  src="static/js/index.js"></script>
 
 <div class="column" id="slide-up">
 
