--- a/vis_file.html
+++ b/vis_file.html
@@ -2,9 +2,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="css/responsive.css">
+<link rel="stylesheet" href="static/css/responsive.css">
     <link href="https://getbootstrap.com/examples/justified-nav/justified-nav.css" rel="stylesheet">
-    <link rel="stylesheet" href="stylegraph.css">
+    <link rel="stylesheet" href="static/stylegraph.css">
 <style>
 
 svg {
